[backend] Adding comments for better maintainability